Add creating area/cctv API
